<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="radial_character">Персонаж</string>
    <string name="radial_close">"Закрыть
меню"</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_caption">Caption</string>
    <string name="dialog_discount_text">"Тут что-то должно быть
но украли"</string>
    <string name="binder_cmd">Команда #%d</string>
    <string name="chat_connected_to">Connected to</string>
    <string name="chat_t">T</string>
    <string name="dialog_enter">Войти</string>
    <string name="dialog_field1">Field1</string>
    <string name="dialog_field1_t">Field1\u0009</string>
    <string name="dialog_field2">Field2</string>
    <string name="dialog_field2_t">Field2\u0009</string>
    <string name="dialog_field3_t">Field3\u0009</string>
    <string name="dialog_field4">Field4</string>
    <string name="dialog_field4_t">Field4\u0009</string>
    <string name="dialog_list_text">Текст</string>
    <string name="dialog_old_cancel">Отмена</string>
    <string name="dialog_old_caption">Caption</string>
    <string name="dialog_old_enter">Войти</string>
    <string name="dialog_old_field1">Field1</string>
    <string name="dialog_old_field2">Field2</string>
    <string name="dialog_old_field4">Field4</string>
    <string name="dialog_old_text">"Text333333333333333333333333333333333333333
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text"</string>
    <string name="dialog_settings_0_p">0%</string>
    <string name="dialog_settings_100">100</string>
    <string name="dialog_settings_100_p">100%</string>
    <string name="dialog_settings_1_0">1.0</string>
    <string name="dialog_settings_30">30</string>
    <string name="dialog_text">"Text333333333333333333333333333333333333333
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text
Text"</string>
    <string name="speedometer_0">0</string>
    <string name="speedometer_000000">000000</string>
    <string name="speedometer_0_l">0л</string>
    <string name="speedometer_0_p">0%</string>
    <string name="speedometer_km">км/ч</string>
    <string name="speedometer_litr">л</string>
    <string name="speedometer_loading">Loading...</string>
    <string name="dialog_voice_70_p">70%</string>
    <string name="dialog_voice_jek_delphi">Jek_Delphi</string>
    <string name="radial_houses">Имущество</string>
    <string name="radial_kiss">Поцеловать</string>
    <string name="radial_lic">Лицензии</string>
    <string name="radial_light">Стробоскопы</string>
    <string name="radial_money">Деньги</string>
    <string name="radial_pass">Паспорт</string>
    <string name="radial_sex">Обнять</string>
    <string name="radial_skills">Навыки</string>
    <string name="radial_ticket">В.Билет</string>
    <string name="radio">Радио</string>
    <string name="raise">Повысить</string>
    <string name="raise_the_rank">Повысить ранг</string>
    <string name="rank">Ранг</string>


    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="hello">GTA San Andreas</string>
    <string name="app_name">Волга Онлайн</string>
    <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
    <string name="text_button_resume_cellular">Resume download</string>
    <string name="text_button_wifi_settings">Wi-Fi settings</string>
    <string name="text_verifying_download">Verifying Download</string>
    <string name="text_validation_complete">XAPK File Validation Complete. Select OK to exit.</string>
    <string name="text_validation_failed">XAPK File Validation Failed.</string>
    <string name="text_button_pause">Pause Download</string>
    <string name="text_button_resume">Resume Download</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_cancel_verify">Cancel Verification</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="players_list_header_dialog">Список игроков</string>
    <string name="players_list_header_first_column">ID</string>
    <string name="players_list_header_fourth_column">Пинг</string>
    <string name="players_list_header_second_column">Ник игрока</string>
    <string name="players_list_header_third_column">Уровень</string>
    <string name="players_list_search_hint">Поиск игрока</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="state_unknown">Starting…</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_completed">Download finished</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed">Download failed</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_join_from_launcher_msg">Вам необходимо зайти в игру используя лаунчер</string>
    <string name="dialog_join_from_launcher_ok">Принять</string>
    <string name="selector_server">Server:</string>
    <string name="selector_server_test">Test Server №</string>
    <string name="serverlist_150_1000">150/1000</string>
    <string name="serverlist_mobile_1">VOLGA ONLINE #1</string>
    <string name="serverlist_rec">РЕКОМЕНДУЕМЫЙ</string>
    <string name="x22c0">⋀</string>
</resources>
