<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/statusText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginBottom="10.0dip"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/downloaderDashboard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/statusText"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <TextView
                    android:id="@+id/progressAsFraction"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5.0dip"
                    android:text="0MB / 0MB" />

                <TextView
                    android:id="@+id/progressAsPercentage"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/progressBar"
                    android:text="0%" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/progressAsFraction"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:layout_weight="1.0" />

                <TextView
                    android:id="@+id/progressAverageSpeed"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/progressBar"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5.0dip" />

                <TextView
                    android:id="@+id/progressTimeRemaining"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/progressBar"
                    android:layout_alignRight="@id/progressBar" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/downloaderDashboard00"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pauseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginRight="5.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:layout_weight="0.0"
                    android:minWidth="94.0dip"
                    android:minHeight="40.0dip"
                    android:text="@string/text_button_pause" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginRight="5.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:layout_weight="0.0"
                    android:minWidth="94.0dip"
                    android:minHeight="40.0dip"
                    android:text="@string/text_button_cancel"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/approveCellular"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textPausedParagraph1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:text="@string/text_paused_cellular" />

        <TextView
            android:id="@+id/textPausedParagraph2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:text="@string/text_paused_cellular_2" />

        <LinearLayout
            android:id="@+id/buttonRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resumeOverCellular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10.0dip"
                android:text="@string/text_button_resume_cellular" />

            <Button
                android:id="@+id/wifiSettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10.0dip"
                android:text="@string/text_button_wifi_settings" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>